--- a/platform/qt/MainWindow.ui
+++ b/platform/qt/MainWindow.ui
@@ -120,7 +120,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>32</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -467,9 +467,9 @@ QGroupBox::indicator:checked:disabled {
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-732</y>
-            <width>341</width>
-            <height>6480</height>
+            <y>-423</y>
+            <width>318</width>
+            <height>6226</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayoutScrollArea">
@@ -2684,10 +2684,10 @@ QGroupBox::indicator:checked:disabled {
                      </property>
                     </widget>
                    </item>
-                   <item row="0" column="1">
+                   <item row="0" column="1" alignment="Qt::AlignRight">
                     <widget class="QPushButton" name="toolButtonDualIsoBake">
                      <property name="text">
-                      <string>Bake</string>
+                      <string>Freeze</string>
                      </property>
                      <property name="checkable">
                       <bool>true</bool>
